fix: word wrap in p

--- a/src/style.sass
+++ b/src/style.sass
@@ -14,6 +14,7 @@ body
 
 p
   margin: 0
+  word-wrap: break-word
 
   & + p
     margin-top: 1rem
